# sonos-websocket

./: Cargo.toml  README.md
examples/: connect.rs  discover.rs  playback.rs  subscribe.rs
src/: discovery.rs  error.rs  lib.rs  message.rs  player.rs  system.rs  tls.rs  types.rs
src/connection/: mod.rs  player_connection.rs
