[package]
name = "sonos-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.28"

# TLS (custom CA for Sonos)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# mDNS discovery
mdns-sd = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["signal"] }
